--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                     <td></td>
                     <td>582.48€</td>
                     <td><a href="Facturas/Frigorificos Lluis 9 de enero.jpeg">Ver Detalles</a></td>
-                    <td><span class="status pending">Pendiente</span></td>
+                    <td><span class="status paid">Pagada</span></td>
                 </tr>
                 <tr>
                     <td>Frigorificos Lluis</td>
@@ -175,7 +175,7 @@
                     <td></td>
                     <td>75.65€</td>
                     <td><a href="Facturas/Frigorificos Lluis 9 de enero 2.jpeg">Ver Detalles</a></td>
-                    <td><span class="status overdue">?</span></td>
+                    <td><span class="status paid">Pagada</span></td>
                 </tr>
                 <tr>
                     <td>Frigorificos Lluis</td>
@@ -186,7 +186,7 @@
                     <td></td>
                     <td>?</td>
                     <td><a href="Facturas/Frigorificos Lluis 9 de enero 3.jpeg">Ver Detalles</a></td>
-                    <td><span class="status overdue">?</span></td>
+                    <td><span class="status paid">Pagada</span></td>
                 </tr>
                 <tr>
                     <td>Congelados Romero</td>
@@ -275,7 +275,7 @@
                     <td>2.55€ <br>2.86€ <br>6.84€</td>
                     <td>1,092.14€</td>
                     <td><a href="Facturas/Agora 16 de enero.jpeg">Ver Detalles</a></td>
-                    <td><span class="status pending">Pendiente</span></td>
+                    <td><span class="status paid">Pagada</span></td>
                 </tr>
                 <tr>
                     <td colspan="9">17/01/2025</td>
@@ -403,7 +403,7 @@
                     <td></td>
                     <td>338.54€</td>
                     <td><a href="Facturas/">Ver Detalles</a></td>
-                    <td><span class="status overdue">?</span></td>
+                    <td><span class="status paid">Pagada</span></td>
                 </tr>
                 <tr>
                     <td>Sales</td>
