--- a/index.html
+++ b/index.html
@@ -449,6 +449,56 @@
                     <td><a href="Facturas/">Ver Detalles</a></td>
                     <td><span class="status paid">Pagado</span></td>
                 </tr>
+                <tr>
+                    <td>Agora</td>
+                    <td>23/01/2025</td>
+                    <td>963.75€</td>
+                    <td>104.53€</td>
+                    <td>-425.27€</td>
+                    <td>1.24€ <br>2.86€</td>
+                    <td>647.11€</td>
+                    <td><a href="Facturas/">Ver Detalles</a></td>
+                    <td><span class="status overdue">?</span></td>
+                </tr>
+                <tr>
+                    <td colspan="9">27/01/2025</td>
+                </tr>
+                <tr>
+                    <td>Agora</td>
+                    <td>27/01/2025</td>
+                    <td>61.28€</td>
+                    <td>11.98€</td>
+                    <td>-7.48€</td>
+                    <td>2.86€</td>
+                    <td>69.04€</td>
+                    <td><a href="Facturas/">Ver Detalles</a></td>
+                    <td><span class="status overdue">?</span></td>
+                </tr>
+                <tr>
+                    <td colspan="9">28/01/2025</td>
+                </tr>
+                <tr>
+                    <td>Coffe Center</td>
+                    <td>28/01/2025</td>
+                    <td>145.30€</td>
+                    <td>14.53€</td>
+                    <td>0€</td>
+                    <td></td>
+                    <td>159.83€</td>
+                    <td><a href="Facturas/">Ver Detalles</a></td>
+                    <td><span class="status overdue">?</span></td>
+                </tr>
+                <tr>
+                    <td>Tosca</td>
+                    <td>28/01/2025</td>
+                    <td>107.26€</td>
+                    <td>16.23€</td>
+                    <td>0€</td>
+                    <td>0.12€</td>
+                    <td>123.61€</td>
+                    <td><a href="Facturas/">Ver Detalles</a></td>
+                    <td><span class="status pending">Pendiente</span></td>
+                </tr>
             </tbody>
         </table>
     </div>
