--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
                     <td>0€</td>
                     <td></td>
                     <td>312.24€</td>
-                    <td><a href="Facturas/">Ver Detalles</a></td>
+                    <td><a href="Facturas/Congelados Romero 17.jpeg">Ver Detalles</a></td>
                     <td><span class="status overdue">?</span></td>
                 </tr>
                 <tr>
@@ -302,7 +302,7 @@
                     <td>0€</td>
                     <td></td>
                     <td>394.08€</td>
-                    <td><a href="Facturas/">Ver Detalles</a></td>
+                    <td><a href="Facturas/Marisc Romeu 18.jpeg">Ver Detalles</a></td>
                     <td><span class="status pending">Pendiente</span></td>
                 </tr>
                 <tr>
@@ -316,7 +316,7 @@
                     <td>0€</td>
                     <td></td>
                     <td>45.35€</td>
-                    <td><a href="Facturas/">Ver Detalles</a></td>
+                    <td><a href="Facturas/Merca Mei Lian 20.jpeg">Ver Detalles</a></td>
                     <td><span class="status paid">Pagado</span></td>
                 </tr>
                 <tr>
@@ -327,7 +327,7 @@
                     <td>-285.00€</td>
                     <td></td>
                     <td>1,530.00€</td>
-                    <td><a href="Facturas/">Ver Detalles</a></td>
+                    <td><a href="Facturas/Hotel Montecarlo 20.jpeg">Ver Detalles</a></td>
                     <td><span class="status paid">Pagado</span></td>
                 </tr>
                 <tr>
@@ -338,7 +338,7 @@
                     <td>-12.07€</td>
                     <td></td>
                     <td>504.36€</td>
-                    <td><a href="Facturas/">Ver Detalles</a></td>
+                    <td><a href="Facturas/Hotel montecarlo 20 (gas).jpeg">Ver Detalles</a></td>
                     <td><span class="status paid">Pagado</span></td>
                 </tr>
                 <tr>
@@ -352,7 +352,7 @@
                     <td>0€</td>
                     <td></td>
                     <td>54.78€</td>
-                    <td><a href="Facturas/">Ver Detalles</a></td>
+                    <td><a href="Facturas/Marisc Romeu 21.jpeg">Ver Detalles</a></td>
                     <td><span class="status pending">Pendiente</span></td>
                 </tr>
                 <tr>
@@ -363,7 +363,7 @@
                     <td>0€</td>
                     <td></td>
                     <td>45.78€</td>
-                    <td><a href="Facturas/">Ver Detalles</a></td>
+                    <td><a href="Facturas/Abella Congelats 21.jpeg">Ver Detalles</a></td>
                     <td><span class="status paid">Pagado</span></td>
                 </tr>
                 <tr>
@@ -374,7 +374,7 @@
                     <td>0€</td>
                     <td></td>
                     <td>309.00€</td>
-                    <td><a href="Facturas/">Ver Detalles</a></td>
+                    <td><a href="Facturas/GM Cash 21 (1).jpeg">Pág. 1</a><br><a href="Facturas/GM Cash 21 (2).jpeg">Pág. 2</a></td>
                     <td><span class="status paid">Pagado</span></td>
                 </tr>
                 <tr>
@@ -388,7 +388,7 @@
                     <td>0€</td>
                     <td></td>
                     <td>58.74€</td>
-                    <td><a href="Facturas/">Ver Detalles</a></td>
+                    <td><a href="Facturas/Marisc Romeu 22.jpeg">Ver Detalles</a></td>
                     <td><span class="status paid">Pagada</span></td>
                 </tr>
                 <tr>
@@ -402,7 +402,7 @@
                     <td>0€</td>
                     <td></td>
                     <td>338.54€</td>
-                    <td><a href="Facturas/">Ver Detalles</a></td>
+                    <td><a href="Facturas/Figoríficos Lluís 23.jpeg">Ver Detalles</a></td>
                     <td><span class="status paid">Pagada</span></td>
                 </tr>
                 <tr>
@@ -413,7 +413,7 @@
                     <td>0€</td>
                     <td></td>
                     <td>135.99€</td>
-                    <td><a href="Facturas/">Ver Detalles</a></td>
+                    <td><a href="Facturas/Sales 23.jpeg">Ver Detalles</a></td>
                     <td><span class="status overdue">?</span></td>
                 </tr>
                 <tr>
@@ -424,7 +424,7 @@
                     <td>0€</td>
                     <td></td>
                     <td>88.48€</td>
-                    <td><a href="Facturas/">Ver Detalles</a></td>
+                    <td><a href="Facturas/Balagué 23.jpeg">Ver Detalles</a></td>
                     <td><span class="status overdue">?</span></td>
                 </tr>
                 <tr>
@@ -435,7 +435,7 @@
                     <td>0€</td>
                     <td></td>
                     <td>77.68</td>
-                    <td><a href="Facturas/">Ver Detalles</a></td>
+                    <td><a href="Facturas/Pavidols 23.jpeg">Ver Detalles</a></td>
                     <td><span class="status pending">Pendiente</span></td>
                 </tr>
                 <tr>
@@ -446,7 +446,7 @@
                     <td>0€</td>
                     <td></td>
                     <td>56.17</td>
-                    <td><a href="Facturas/">Ver Detalles</a></td>
+                    <td><a href="Facturas/Maheso 23.jpeg">Ver Detalles</a></td>
                     <td><span class="status paid">Pagado</span></td>
                 </tr>
                 <tr>
@@ -457,7 +457,7 @@
                     <td>-425.27€</td>
                     <td>1.24€ <br>2.86€</td>
                     <td>647.11€</td>
-                    <td><a href="Facturas/">Ver Detalles</a></td>
+                    <td><a href="Facturas/Agora 23.jpeg">Ver Detalles</a></td>
                     <td><span class="status overdue">?</span></td>
                 </tr>
                 <tr>
@@ -471,7 +471,7 @@
                     <td>-7.48€</td>
                     <td>2.86€</td>
                     <td>69.04€</td>
-                    <td><a href="Facturas/">Ver Detalles</a></td>
+                    <td><a href="Facturas/Agora 27.jpeg">Ver Detalles</a></td>
                     <td><span class="status overdue">?</span></td>
                 </tr>
                 <tr>
@@ -485,7 +485,7 @@
                     <td>0€</td>
                     <td></td>
                     <td>159.83€</td>
-                    <td><a href="Facturas/">Ver Detalles</a></td>
+                    <td><a href="Facturas/Coffee Center 28.jpeg">Ver Detalles</a></td>
                     <td><span class="status overdue">?</span></td>
                 </tr>
                 <tr>
@@ -496,7 +496,7 @@
                     <td>0€</td>
                     <td>0.12€</td>
                     <td>123.61€</td>
-                    <td><a href="Facturas/">Ver Detalles</a></td>
+                    <td><a href="Facturas/Tosca 28.jpeg">Ver Detalles</a></td>
                     <td><span class="status pending">Pendiente</span></td>
                 </tr>
             </tbody>
