--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <td>0€</td>
                     <td>2.50€</td>
                     <td>362.12€</td>
-                    <td><a href="Facturas/Balagué 3 de enero.jpeg">Ver Detalles</a><a href="Facturas/Balagué 3 de enero 2.jpeg">Ver Detalles</a></td>
+                    <td><a href="Facturas/Balagué 3 de enero.jpeg">Pág. 1</a><br><a href="Facturas/Balagué 3 de enero 2.jpeg">Pág. 2</a></td>
                     <td><span class="status paid">Pagado</span></td>
                 </tr>
                 <tr>
