--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                     <td></td>
                     <td>190.53€</td>
                     <td><a href="Facturas/Sales 9 de enero.jpeg">Ver Detalles</a></td>
-                    <td><span class="status overdue">?</span></td>
+                    <td><span class="status paid">Pagada</span></td>
                 </tr>
                 <tr>
                     <td>Torres Traver</td>
@@ -152,7 +152,7 @@
                     <td>0€</td>
                     <td></td>
                     <td>37.75€</td>
-                    <td><a href="Facturas/Torres Trayer 9 de enero.jpeg">Ver Detalles</a></td>
+                    <td><a href="Facturas/Torres Traver 9 de enero.jpeg">Ver Detalles</a></td>
                     <td><span class="status paid">Pagado</span></td>
                 </tr>
                 <tr>
@@ -414,7 +414,7 @@
                     <td></td>
                     <td>135.99€</td>
                     <td><a href="Facturas/Sales 23.jpeg">Ver Detalles</a></td>
-                    <td><span class="status overdue">?</span></td>
+                    <td><span class="status paid">Pagada</span></td>
                 </tr>
                 <tr>
                     <td>Balagué</td>
@@ -425,7 +425,7 @@
                     <td></td>
                     <td>88.48€</td>
                     <td><a href="Facturas/Balagué 23.jpeg">Ver Detalles</a></td>
-                    <td><span class="status overdue">?</span></td>
+                    <td><span class="status paid">Pagada</span></td>
                 </tr>
                 <tr>
                     <td>Pavidols</td>
@@ -436,7 +436,7 @@
                     <td></td>
                     <td>77.68</td>
                     <td><a href="Facturas/Pavidols 23.jpeg">Ver Detalles</a></td>
-                    <td><span class="status pending">Pendiente</span></td>
+                    <td><span class="status paid">Pagada</span></td>
                 </tr>
                 <tr>
                     <td>Maheso</td>
@@ -458,7 +458,7 @@
                     <td>1.24€ <br>2.86€</td>
                     <td>647.11€</td>
                     <td><a href="Facturas/Agora 23.jpeg">Ver Detalles</a></td>
-                    <td><span class="status overdue">?</span></td>
+                    <td><span class="status pending">Pendiente</span></td>
                 </tr>
                 <tr>
                     <td colspan="9">27/01/2025</td>
@@ -472,7 +472,7 @@
                     <td>2.86€</td>
                     <td>69.04€</td>
                     <td><a href="Facturas/Agora 27.jpeg">Ver Detalles</a></td>
-                    <td><span class="status overdue">?</span></td>
+                    <td><span class="status paid">Pagada</span></td>
                 </tr>
                 <tr>
                     <td colspan="9">28/01/2025</td>
@@ -486,7 +486,7 @@
                     <td></td>
                     <td>159.83€</td>
                     <td><a href="Facturas/Coffee Center 28.jpeg">Ver Detalles</a></td>
-                    <td><span class="status overdue">?</span></td>
+                    <td><span class="status paid">Pagada</span></td>
                 </tr>
                 <tr>
                     <td>Tosca</td>
@@ -498,6 +498,54 @@
                     <td>123.61€</td>
                     <td><a href="Facturas/Tosca 28.jpeg">Ver Detalles</a></td>
                     <td><span class="status pending">Pendiente</span></td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    <div class="container">
+        <h2>Resumen de Facturas</h2>
+        <table>
+            <thead>
+                <tr>
+                    <th>Empresa</th>
+                    <th>Fecha</th>
+                    <th>Total (€)</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td rowspan="4">Marisc Romeu</td>
+                    <td>04/01/2025</td>
+                    <td>839.59€</td>
+                </tr>
+                <tr>
+                    <td>18/01/2025</td>
+                    <td>394.08€</td>
+                </tr>
+                <tr>
+                    <td>21/01/2025</td>
+                    <td>54.78€</td>
+                </tr>
+                <tr>
+                    <td>22/01/2025</td>
+                    <td>58.74€</td>
+                </tr>
+                <tr>
+                    <td colspan="2"><strong>Total Marisc Romeu</strong></td>
+                    <td><strong>1,347.19€</strong></td>
+                </tr>
+                <tr>
+                    <td rowspan="2">Congelados Romero</td>
+                    <td>09/01/2025</td>
+                    <td>240.16€</td>
+                </tr>
+                <tr>
+                    <td>17/01/2025</td>
+                    <td>312.24€</td>
+                </tr>
+                <tr>
+                    <td colspan="2"><strong>Total Congelados Romero</strong></td>
+                    <td><strong>552.40€</strong></td>
                 </tr>
             </tbody>
         </table>
