--- a/index.html
+++ b/index.html
@@ -461,6 +461,20 @@
                     <td><span class="status pending">Pendiente</span></td>
                 </tr>
                 <tr>
+                    <td colspan="9">25/01/2025</td>
+                </tr>
+                <tr>
+                    <td>Maheso</td>
+                    <td>25/01/2025</td>
+                    <td>51.06€</td>
+                    <td>5.11€</td>
+                    <td>0€</td>
+                    <td></td>
+                    <td>56.17€</td>
+                    <td><a href="Facturas/Maheso 25.jpeg">Ver Detalles</a></td>
+                    <td><span class="status paid">Pagada</span></td>
+                </tr>
+                <tr>
                     <td colspan="9">27/01/2025</td>
                 </tr>
                 <tr>
@@ -499,56 +513,293 @@
                     <td><a href="Facturas/Tosca 28.jpeg">Ver Detalles</a></td>
                     <td><span class="status pending">Pendiente</span></td>
                 </tr>
+                <tr>
+                    <td colspan="9">30/01/2025</td>
+                </tr>
+                <tr>
+                    <td>Sales</td>
+                    <td>30/01/2025</td>
+                    <td>86.23€</td>
+                    <td>14.32€</td>
+                    <td>0€</td>
+                    <td></td>
+                    <td>100.55€</td>
+                    <td><a href="Facturas/Sales 28.jpeg">Ver Detalles</a></td>
+                    <td><span class="status pending">Pendiente</span></td>
+                </tr>
+                <tr>
+                    <td>Pimpamfruit</td>
+                    <td>30/01/2025</td>
+                    <td>91.84€</td>
+                    <td>3.91€</td>
+                    <td>0€</td>
+                    <td>0.12€</td>
+                    <td>101.75€</td>
+                    <td><a href="Facturas/Pimpamfruit 30.jpeg">Ver Detalles</a></td>
+                    <td><span class="status pending">Pendiente</span></td>
+                </tr>
+                <tr>
+                    <td>Pimpamfruit</td>
+                    <td>30/01/2025</td>
+                    <td>8.46€</td>
+                    <td>0.85€</td>
+                    <td>0€</td>
+                    <td>€</td>
+                    <td>9.31€</td>
+                    <td><a href="Facturas/Pimpamfruit 30 (2).jpeg">Ver Detalles</a></td>
+                    <td><span class="status pending">Pendiente</span></td>
+                </tr>
+                <tr>
+                    <td>Agora</td>
+                    <td>30/01/2025</td>
+                    <td>757.32€</td>
+                    <td>81.95€</td>
+                    <td>-344.75€</td>
+                    <td>0.65€<br>2.86€ <br>3.56€</td>
+                    <td>501.59€</td>
+                    <td><a href="Facturas/Agora 30.jpeg">Ver Detalles</a></td>
+                    <td><span class="status paid">Pagado</span></td>
+                </tr>
+                <tr>
+                    <td>Maheso</td>
+                    <td>30/01/2025</td>
+                    <td>162.20€</td>
+                    <td>14.02€</td>
+                    <td>-22.04€</td>
+                    <td>€</td>
+                    <td>154.18€</td>
+                    <td><a href="Facturas/Maheso 30.jpeg">Ver Detalles</a></td>
+                    <td><span class="status pending">Pendiente</span></td>
+                </tr>
+                <tr>
+                    <td>Maheso</td>
+                    <td>30/01/2025</td>
+                    <td>58.45€</td>
+                    <td>5.14€</td>
+                    <td>-7.01€</td>
+                    <td></td>
+                    <td>56.58€</td>
+                    <td><a href="Facturas/Maheso 30 (2).jpeg">Ver Detalles</a></td>
+                    <td><span class="status pending">Pendiente</span></td>
+                </tr>
+                <tr>
+                    <td>Pavidols</td>
+                    <td>30/01/2025</td>
+                    <td>33.30€</td>
+                    <td>3.33€</td>
+                    <td>0€</td>
+                    <td>€</td>
+                    <td>36.63€</td>
+                    <td><a href="Facturas/Pavidols 30.jpeg">Ver Detalles</a></td>
+                    <td><span class="status paid">Pagada</span></td>
+                </tr>
+                <tr>
+                    <td>Pavidols</td>
+                    <td>30/01/2025</td>
+                    <td>63.62€</td>
+                    <td>6.36€</td>
+                    <td>0€</td>
+                    <td>€</td>
+                    <td>69.98€</td>
+                    <td><a href="Facturas/Pavidols 30.jpeg">Ver Detalles</a></td>
+                    <td><span class="status pending">Pendiente</span></td>
+                </tr>
+                <tr>
+                    <td>Elpozo</td>
+                    <td>30/01/2025</td>
+                    <td>18.62€</td>
+                    <td>1.86€</td>
+                    <td>0€</td>
+                    <td>€</td>
+                    <td>20.48€</td>
+                    <td><a href="Facturas/Elpozo 30.jpeg">Ver Detalles</a></td>
+                    <td><span class="status paid">Pagada</span></td>
+                </tr>
+                <tr>
+                    <td>Elpozo</td>
+                    <td>30/01/2025</td>
+                    <td>32.00€</td>
+                    <td>3.20€</td>
+                    <td>0€</td>
+                    <td>€</td>
+                    <td>35.20€</td>
+                    <td><a href="Facturas/Elpozo 30 (2).jpeg">Ver Detalles</a></td>
+                    <td><span class="status paid">Pagada</span></td>
+                </tr>
+                <tr>
+                    <td>Congelados Romero</td>
+                    <td>30/01/2025</td>
+                    <td>105.81€</td>
+                    <td>10.58€</td>
+                    <td>0€</td>
+                    <td>€</td>
+                    <td>116.39€</td>
+                    <td><a href="Facturas/Congelados Romero 30.jpeg">Ver Detalles</a></td>
+                    <td><span class="status pending">Pendiente</span></td>
+                </tr>
+                <tr>
+                    <td>Lidl</td>
+                    <td>30/01/2025</td>
+                    <td>7.54€</td>
+                    <td>0.30€</td>
+                    <td>0€</td>
+                    <td>€</td>
+                    <td>7.84€</td>
+                    <td><a href="Facturas/Lidl 30.jpeg">Ver Detalles</a></td>
+                    <td><span class="status pending">Pendiente</span></td>
+                </tr>
+                <tr>
+                    <td colspan="9">31/01/2025</td>
+                </tr>
+                <tr>
+                    <td>Abella Congelats</td>
+                    <td>31/01/2025</td>
+                    <td>64.61€</td>
+                    <td>4.40€</td>
+                    <td>0€</td>
+                    <td>€</td>
+                    <td>69.01€</td>
+                    <td><a href="Facturas/Abella Congelats 31.jpeg">Ver Detalles</a></td>
+                    <td><span class="status paid">Pagada</span></td>
+                </tr>
+                <tr>
+                    <td></td>
+                </tr>
             </tbody>
         </table>
     </div>
+    <!-- <header>
+        <h1>Resumen de Facturas - Enero 2025</h1>
+    </header>
+
     <div class="container">
-        <h2>Resumen de Facturas</h2>
         <table>
             <thead>
                 <tr>
                     <th>Empresa</th>
                     <th>Fecha</th>
-                    <th>Total (€)</th>
+                    <th>Importe Total (€)</th>
+                    <th>Estado</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
+                    <td rowspan="3">Agora</td>
+                    <td>02/01/2025</td>
+                    <td>59.02€</td>
+                    <td>Pagado</td>
+                </tr>
+                <tr>
+                    <td>09/01/2025</td>
+                    <td>951.76€</td>
+                    <td>Pagado</td>
+                </tr>
+                <tr>
+                    <td>16/01/2025</td>
+                    <td>1,092.14€</td>
+                    <td>Pagado</td>
+                </tr>
+                <tr>
+                    <td colspan="2"><strong>Total Agora</strong></td>
+                    <td><strong>2,102.92€</strong></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>Balagué</td>
+                    <td>03/01/2025</td>
+                    <td>362.12€</td>
+                    <td>Pagado</td>
+                </tr>
+                <tr>
+                    <td>Gran Bazar</td>
+                    <td>05/01/2025</td>
+                    <td>58.94€</td>
+                    <td>Pagado</td>
+                </tr>
+                <tr>
+                    <td>Abella Congelats</td>
+                    <td>07/01/2025</td>
+                    <td>64.03€</td>
+                    <td>Pagado</td>
+                </tr>
+                <tr>
+                    <td>Caprabo</td>
+                    <td>09/01/2025</td>
+                    <td>98.95€</td>
+                    <td>Pagado</td>
+                </tr>
+                <tr>
                     <td rowspan="4">Marisc Romeu</td>
                     <td>04/01/2025</td>
                     <td>839.59€</td>
+                    <td>Pendiente</td>
                 </tr>
                 <tr>
                     <td>18/01/2025</td>
                     <td>394.08€</td>
+                    <td>Pendiente</td>
                 </tr>
                 <tr>
                     <td>21/01/2025</td>
                     <td>54.78€</td>
+                    <td>Pendiente</td>
                 </tr>
                 <tr>
                     <td>22/01/2025</td>
                     <td>58.74€</td>
+                    <td>Pagada</td>
                 </tr>
                 <tr>
                     <td colspan="2"><strong>Total Marisc Romeu</strong></td>
                     <td><strong>1,347.19€</strong></td>
+                    <td></td>
                 </tr>
                 <tr>
-                    <td rowspan="2">Congelados Romero</td>
+                    <td rowspan="3">Congelados Romero</td>
                     <td>09/01/2025</td>
                     <td>240.16€</td>
+                    <td>Pagado</td>
                 </tr>
                 <tr>
                     <td>17/01/2025</td>
                     <td>312.24€</td>
+                    <td>?</td>
+                </tr>
+                <tr>
+                    <td>30/01/2025</td>
+                    <td>116.39€</td>
+                    <td>Pendiente</td>
                 </tr>
                 <tr>
                     <td colspan="2"><strong>Total Congelados Romero</strong></td>
-                    <td><strong>552.40€</strong></td>
+                    <td><strong>668.79€</strong></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>GM Cash</td>
+                    <td>11/01/2025</td>
+                    <td>329.98€</td>
+                    <td>Pagado</td>
+                </tr>
+                <tr>
+                    <td>Hotel Montecarlo</td>
+                    <td>20/01/2025</td>
+                    <td>1,530.00€</td>
+                    <td>Pagado</td>
+                </tr>
+                <tr>
+                    <td>Maheso</td>
+                    <td>25/01/2025</td>
+                    <td>56.17€</td>
+                    <td>Pagado</td>
+                </tr>
+                <tr>
+                    <td colspan="2"><strong>Total General</strong></td>
+                    <td><strong>6,955.99€</strong></td>
+                    <td></td>
                 </tr>
             </tbody>
         </table>
-    </div>
+    </div> -->
 </body>
 </html>
