Resumen de marisc romeu

--- a/index.html
+++ b/index.html
@@ -668,138 +668,56 @@
             </tbody>
         </table>
     </div>
-    <!-- <header>
-        <h1>Resumen de Facturas - Enero 2025</h1>
-    </header>
-
     <div class="container">
+        <h2>Resumen de Facturas - Marisc Romeu</h2>
+        
+        <h3>Facturas Pendientes</h3>
         <table>
             <thead>
                 <tr>
-                    <th>Empresa</th>
                     <th>Fecha</th>
                     <th>Importe Total (€)</th>
-                    <th>Estado</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
-                    <td rowspan="3">Agora</td>
-                    <td>02/01/2025</td>
-                    <td>59.02€</td>
-                    <td>Pagado</td>
-                </tr>
-                <tr>
-                    <td>09/01/2025</td>
-                    <td>951.76€</td>
-                    <td>Pagado</td>
-                </tr>
-                <tr>
-                    <td>16/01/2025</td>
-                    <td>1,092.14€</td>
-                    <td>Pagado</td>
-                </tr>
-                <tr>
-                    <td colspan="2"><strong>Total Agora</strong></td>
-                    <td><strong>2,102.92€</strong></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>Balagué</td>
-                    <td>03/01/2025</td>
-                    <td>362.12€</td>
-                    <td>Pagado</td>
-                </tr>
-                <tr>
-                    <td>Gran Bazar</td>
-                    <td>05/01/2025</td>
-                    <td>58.94€</td>
-                    <td>Pagado</td>
-                </tr>
-                <tr>
-                    <td>Abella Congelats</td>
-                    <td>07/01/2025</td>
-                    <td>64.03€</td>
-                    <td>Pagado</td>
-                </tr>
-                <tr>
-                    <td>Caprabo</td>
-                    <td>09/01/2025</td>
-                    <td>98.95€</td>
-                    <td>Pagado</td>
-                </tr>
-                <tr>
-                    <td rowspan="4">Marisc Romeu</td>
                     <td>04/01/2025</td>
                     <td>839.59€</td>
-                    <td>Pendiente</td>
                 </tr>
                 <tr>
                     <td>18/01/2025</td>
                     <td>394.08€</td>
-                    <td>Pendiente</td>
                 </tr>
                 <tr>
                     <td>21/01/2025</td>
                     <td>54.78€</td>
-                    <td>Pendiente</td>
                 </tr>
                 <tr>
-                    <td>22/01/2025</td>
-                    <td>58.74€</td>
-                    <td>Pagada</td>
-                </tr>
-                <tr>
-                    <td colspan="2"><strong>Total Marisc Romeu</strong></td>
-                    <td><strong>1,347.19€</strong></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td rowspan="3">Congelados Romero</td>
-                    <td>09/01/2025</td>
-                    <td>240.16€</td>
-                    <td>Pagado</td>
-                </tr>
-                <tr>
-                    <td>17/01/2025</td>
-                    <td>312.24€</td>
-                    <td>?</td>
-                </tr>
-                <tr>
-                    <td>30/01/2025</td>
-                    <td>116.39€</td>
-                    <td>Pendiente</td>
-                </tr>
-                <tr>
-                    <td colspan="2"><strong>Total Congelados Romero</strong></td>
-                    <td><strong>668.79€</strong></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <td>GM Cash</td>
-                    <td>11/01/2025</td>
-                    <td>329.98€</td>
-                    <td>Pagado</td>
-                </tr>
-                <tr>
-                    <td>Hotel Montecarlo</td>
-                    <td>20/01/2025</td>
-                    <td>1,530.00€</td>
-                    <td>Pagado</td>
-                </tr>
-                <tr>
-                    <td>Maheso</td>
-                    <td>25/01/2025</td>
-                    <td>56.17€</td>
-                    <td>Pagado</td>
-                </tr>
-                <tr>
-                    <td colspan="2"><strong>Total General</strong></td>
-                    <td><strong>6,955.99€</strong></td>
-                    <td></td>
+                    <td><strong>Total Pendiente</strong></td>
+                    <td><strong>1,288.45€</strong></td>
                 </tr>
             </tbody>
         </table>
-    </div> -->
+        
+        <h3>Facturas Pagadas</h3>
+        <table>
+            <thead>
+                <tr>
+                    <th>Fecha</th>
+                    <th>Importe Total (€)</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>22/01/2025</td>
+                    <td>58.74€</td>
+                </tr>
+                <tr>
+                    <td><strong>Total Pagado</strong></td>
+                    <td><strong>58.74€</strong></td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 </body>
 </html>
