--- a/index.html
+++ b/index.html
@@ -417,17 +417,6 @@
                     <td><span class="status paid">Pagada</span></td>
                 </tr>
                 <tr>
-                    <td>Balagué</td>
-                    <td>23/01/2025</td>
-                    <td>76.90€</td>
-                    <td>11.58€</td>
-                    <td>0€</td>
-                    <td></td>
-                    <td>88.48€</td>
-                    <td><a href="Facturas/Balagué 23.jpeg">Ver Detalles</a></td>
-                    <td><span class="status paid">Pagada</span></td>
-                </tr>
-                <tr>
                     <td>Pavidols</td>
                     <td>23/01/2025</td>
                     <td>70.62€</td>
@@ -459,6 +448,41 @@
                     <td>647.11€</td>
                     <td><a href="Facturas/Agora 23.jpeg">Ver Detalles</a></td>
                     <td><span class="status pending">Pendiente</span></td>
+                <tr>
+                    <td>Aceites Miralles</td>
+                    <td>23/01/2025</td>
+                    <td>72.50€</td>
+                    <td>0€</td>
+                    <td>0€</td>
+                    <td></td>
+                    <td>72.50€</td>
+                    <td><a href="Facturas/Aceites Miralles 23.jpeg">Ver Detalles</a></td>
+                    <td><span class="status pending">Pendiente</span></td>
+                </tr>
+                <tr>
+                    <td colspan="9">24/01/2025</td>
+                </tr>
+                <tr>
+                    <td>Balagué</td>
+                    <td>24/01/2025</td>
+                    <td>76.90€</td>
+                    <td>11.58€</td>
+                    <td>0€</td>
+                    <td></td>
+                    <td>88.48€</td>
+                    <td><a href="Facturas/Balagué 24.jpeg">Ver Detalles</a></td>
+                    <td><span class="status paid">Pagada</span></td>
+                </tr>
+                <tr>
+                    <td>Coffee Center</td>
+                    <td>24/01/2025</td>
+                    <td>186.54€</td>
+                    <td>18.65€</td>
+                    <td>0€</td>
+                    <td></td>
+                    <td>205.19€</td>
+                    <td><a href="Facturas/Coffee Center 24.jpeg">Ver Detalles</a></td>
+                    <td><span class="status overdue">?</span></td>
                 </tr>
                 <tr>
                     <td colspan="9">25/01/2025</td>
@@ -475,6 +499,20 @@
                     <td><span class="status paid">Pagada</span></td>
                 </tr>
                 <tr>
+                    <td colspan="9">26/01/2025</td>
+                </tr>
+                <tr>
+                    <td>Pavidols</td>
+                    <td>30/01/2025</td>
+                    <td>63.62€</td>
+                    <td>6.36€</td>
+                    <td>0€</td>
+                    <td>€</td>
+                    <td>69.98€</td>
+                    <td><a href="Facturas/Pavidols 30.jpeg">Ver Detalles</a></td>
+                    <td><span class="status paid">Pagada</span></td>
+                </tr>
+                <tr>
                     <td colspan="9">27/01/2025</td>
                 </tr>
                 <tr>
@@ -486,6 +524,17 @@
                     <td>2.86€</td>
                     <td>69.04€</td>
                     <td><a href="Facturas/Agora 27.jpeg">Ver Detalles</a></td>
+                    <td><span class="status paid">Pagada</span></td>
+                </tr>
+                <tr>
+                    <td>Spar</td>
+                    <td>27/01/2025</td>
+                    <td>22.63€</td>
+                    <td>2.25€</td>
+                    <td>0€</td>
+                    <td></td>
+                    <td>24.98€</td>
+                    <td><a href="Facturas/Spar 27.jpeg">Ver Detalles</a></td>
                     <td><span class="status paid">Pagada</span></td>
                 </tr>
                 <tr>
@@ -594,17 +643,6 @@
                     <td><span class="status paid">Pagada</span></td>
                 </tr>
                 <tr>
-                    <td>Pavidols</td>
-                    <td>30/01/2025</td>
-                    <td>63.62€</td>
-                    <td>6.36€</td>
-                    <td>0€</td>
-                    <td>€</td>
-                    <td>69.98€</td>
-                    <td><a href="Facturas/Pavidols 30.jpeg">Ver Detalles</a></td>
-                    <td><span class="status pending">Pendiente</span></td>
-                </tr>
-                <tr>
                     <td>Elpozo</td>
                     <td>30/01/2025</td>
                     <td>18.62€</td>
@@ -643,10 +681,10 @@
                     <td>7.54€</td>
                     <td>0.30€</td>
                     <td>0€</td>
-                    <td>€</td>
+                    <td></td>
                     <td>7.84€</td>
                     <td><a href="Facturas/Lidl 30.jpeg">Ver Detalles</a></td>
-                    <td><span class="status pending">Pendiente</span></td>
+                    <td><span class="status paid">Pagada</span></td>
                 </tr>
                 <tr>
                     <td colspan="9">31/01/2025</td>
@@ -657,13 +695,21 @@
                     <td>64.61€</td>
                     <td>4.40€</td>
                     <td>0€</td>
-                    <td>€</td>
+                    <td></td>
                     <td>69.01€</td>
                     <td><a href="Facturas/Abella Congelats 31.jpeg">Ver Detalles</a></td>
                     <td><span class="status paid">Pagada</span></td>
                 </tr>
                 <tr>
+                    <td>Marisc Romeu</td>
+                    <td>31/01/2025</td>
+                    <td>631.11€</td>
+                    <td>63.11€</td>
+                    <td>0€</td>
                     <td></td>
+                    <td>694.22€</td>
+                    <td><a href="Facturas/Marisc Romeu 31.jpeg">Ver Detalles</a></td>
+                    <td><span class="status paid">Pagada</span></td>
                 </tr>
             </tbody>
         </table>
