--- a/index.html
+++ b/index.html
@@ -711,6 +711,17 @@
                     <td><a href="Facturas/Marisc Romeu 31.jpeg">Ver Detalles</a></td>
                     <td><span class="status paid">Pagada</span></td>
                 </tr>
+                <tr>
+                    <td>Hotel Montecarlo</td>
+                    <td>31/01/2025</td>
+                    <td>1,500.00€</td>
+                    <td>315.00€</td>
+                    <td>-285.00€</td>
+                    <td></td>
+                    <td>1,530.00€</td>
+                    <td><a href="Facturas/Hotel Montecarlo 31.jpeg">Ver Detalles</a></td>
+                    <td><span class="status pending">Pendiente</span></td>
+                </tr>
             </tbody>
         </table>
     </div>
